Second commit changed the title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
     
     <head>
-        <title>My site!</title>
+        <title>My GitHub personal site!</title>
         <!--<link href="{% static 'newyear/styles.css' %}" rel="stylesheet">-->
         <style>
             h1{
